Add Map Activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,6 +58,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.martymarron.traveldiaryandroid.StoryListActivity" />
         </activity>
+        <activity
+            android:name=".MapActivity"
+            android:label="@string/title_activity_map"
+            android:parentActivityName=".SaveDataDetailActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.martymarron.traveldiaryandroid.SaveDataDetailActivity" />
+        </activity>
     </application>
 
 </manifest>
