--- a/project.properties
+++ b/project.properties
@@ -11,8 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-L
+target=Google Inc.:Google APIs:19
 android.library.reference.1=..\\..\\appcompat_v7
 android.library.reference.3=../../google-play-services_lib
-android.library.reference.2=../../facebook-android-sdk-3.16.0/facebook-android-sdk-3.16/facebook
+android.library.reference.2=..\\..\\facebook-android-sdk-3.16.0\\facebook-android-sdk-3.16\\facebook
 android.library=false
