--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id" />
         <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBnnddxoP_thU_cvDg8pnDaQsMa3gOKXdY" />
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
@@ -77,6 +78,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.martymarron.traveldiaryandroid.SaveDataDetailActivity" />
         </activity>
+        <activity android:name="com.facebook.LoginActivity" android:label="@string/app_name"></activity>
+        
     </application>
 
 </manifest>
