--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,24 +7,38 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com..martymarron.traveldiaryandroid.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <permission android:name="com..martymarron.traveldiaryandroid.MAPS_RECEIVE" android:protectionLevel="signature" />
-    <uses-feature android:required="true" android:glEsVersion="0x00020000"/>
+
+    <permission
+        android:name="com..martymarron.traveldiaryandroid.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id" />
-        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBnnddxoP_thU_cvDg8pnDaQsMa3gOKXdY" />
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBnnddxoP_thU_cvDg8pnDaQsMa3gOKXdY" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".SaveDataListActivity"
             android:label="@string/app_name" >
@@ -78,8 +92,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.martymarron.traveldiaryandroid.SaveDataDetailActivity" />
         </activity>
-        <activity android:name="com.facebook.LoginActivity" android:label="@string/app_name"></activity>
-        
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".StoryEditActivity"
+            android:label="@string/title_activity_story_edit" >
+        </activity>
     </application>
 
 </manifest>
