--- a/project.properties
+++ b/project.properties
@@ -13,7 +13,7 @@
 # Project target.
 target=Google Inc.:Google APIs:19
 android.library=false
-android.library.reference.3=..\\..\\google-play-services_lib
+android.library.reference.3=..\\TravelDiaryAPIforAndroid
 android.library.reference.1=..\\..\\appcompat_v7
-android.library.reference.2=..\\..\\facebook-android-sdk-3.16.0\\facebook-android-sdk-3.16\\facebook
-android.library.reference.4=../TravelDiaryAPIforAndroid
+android.library.reference.2=..\\..\\google-play-services_lib
+android.library.reference.4=../facebook-android-sdk/facebook
