--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,7 @@
 target=Google Inc.:Google APIs:19
 android.library=false
 
+android.library.reference.3=../../google-play-services_lib
+android.library.reference.4=../TravelDiaryAPIforAndroid
+android.library.reference.1=../../appcompat_v7
+android.library.reference.2=../facebook-android-sdk/facebook
