--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 08 14:05:42 JST 2015
-sdk.dir=C\:\\Users\\x-masashik\\Android\\android-sdk
+#Sat Jan 17 11:04:27 JST 2015
+sdk.dir=/Developer/adt-bundle-mac-x86_64-20140702/sdk
