--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <permission
-        android:name="com..martymarron.traveldiaryandroid.MAPS_RECEIVE"
+        android:name="com.martymarron.traveldiaryandroid.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
     <uses-feature
@@ -33,8 +33,11 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
         <meta-data
+            android:name="com.facebook.sdk.ApplicationName"
+            android:value="@string/app_name" />
+        <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBnnddxoP_thU_cvDg8pnDaQsMa3gOKXdY" />
+            android:value="AIzaSyDOhEh5oBVD6HU31Nwfg0JVoxtBfA6h-yM" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -87,15 +90,16 @@
         <activity
             android:name=".MapActivity"
             android:label="@string/title_activity_map"
-            android:parentActivityName=".SaveDataDetailActivity" >
+            android:parentActivityName=".SaveDataDetailActivity"
+            android:theme="@android:style/Theme.Holo">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.martymarron.traveldiaryandroid.SaveDataDetailActivity" />
         </activity>
-        <activity
-            android:name="com.facebook.LoginActivity"
-            android:label="@string/app_name" >
-        </activity>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
         <activity
             android:name=".StoryEditActivity"
             android:label="@string/title_activity_story_edit" >
