--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@ buildscript {
 apply plugin: 'com.android.application'
 dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
-    compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile project(':facebook-android-sdk:facebook')
+    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.facebook.android:facebook-android-sdk:4.1.0'
     compile project(':TravelDiaryAPIforAndroid')
 }
 android {
